fix card alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App .card-container {
   padding: 50px;
-  display: block;
+  display: flex;
   text-align: center;
 }
 
